// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly based on state 1`] = `
<SimulationMode
  onToggle={[Function]}
/>
`;

exports[`Should render correctly initially 1`] = `
<PlayerMode
  onToggle={[Function]}
/>
`;
